<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCActivity">

    <TextView
        android:id="@+id/imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:text="@string/imc"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llpeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/imc">

        <TextView
            android:id="@+id/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:paddingStart="16dp"
            android:textAlignment="center"
            android:textSize="32dp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/peso"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="48sp"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imc" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/llaltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llpeso">

        <TextView
            android:id="@+id/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:paddingStart="16dp"
            android:textAlignment="center"
            android:textSize="32dp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:fontFamily="cursive"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="48sp"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imc"/>



    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="calcularIMC"
        android:text="@string/button_calculate_imc"
        app:layout_constraintBottom_toTopOf="@id/llresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llaltura" />

    <LinearLayout
        android:id="@+id/llresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3F51B5"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#D5C870"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="#3F51B5"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#D5C870"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>